# GnomeDDC

./: .gitignore  CMakeLists.txt  LICENSE  README.md  meson.build  pyproject.toml  setup.cfg
data/: com.ddcutil.GnomeDDC.appdata.xml  com.ddcutil.GnomeDDC.desktop  gnomeddc.desktop  io.github.gnomeddc.GnomeDDC.desktop  io.github.gnomeddc.desktop  io.github.gnomeddc.gresource.xml  io.github.gnomeddc.metainfo.xml  meson.build  org.gnome.GnomeDDC.appdata.xml.in  org.gnome.GnomeDDC.desktop.in  org.gnome.GnomeDDC.gschema.xml  org.gnomeddc.App.appdata.xml  resources.gresource.xml
data/resources/: gnomeddc.gresource.xml
data/resources/ui/: gnomeddc-window.ui
data/styles/: gnomeddc.css
data/ui/: feature-page.ui  feature_slider.ui  feature_toggle.ui  input_source_row.ui  main-window.ui  monitor-row.ui  monitor_row.ui  window.ui
packaging/: gnomeddc.spec
po/: meson.build
src/: application.vala  ddcutil_client.c  ddcutil_client.h  gnomeddc-application.c  gnomeddc-application.h  gnomeddc-client.c  gnomeddc-client.h  gnomeddc-display.c  gnomeddc-display.h  gnomeddc-window.c  gnomeddc-window.h  gnomeddc.in  main.c  main.py  main.vala  meson.build  models.vala  monitor_item.c  monitor_item.h  window.vala
src/ddc/: async_queue.vala  feature.vala  monitor.vala  service.vala
src/gnomeddc/: __init__.py  __main__.py  app.py  application.py  client.py  ddcutil.py  feature_catalog.py  main.py  monitor_manager.py  monitor_store.py  utils.py  window.py  worker.py
src/gnomeddc/ui/: capability_widgets.py  main_window.py
src/gnomeddc/widgets/: __init__.py  feature_row.py
src/widgets/: feature_slider.vala  feature_toggle.vala  input_source_row.vala  monitor_row.vala
tools/: build_appimage.sh  build_srpm.sh
