[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "gnomeddc"
version = "0.1.0"
description = "Adwaita native GNOME UI for ddcutil"
readme = "README.md"
authors = [{name = "GnomeDDC"}]
license = {text = "GPL-3.0-or-later"}
keywords = ["gnome", "ddcutil", "libadwaita", "monitor"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: POSIX :: Linux",
    "Environment :: X11 Applications :: GTK",
    "Environment :: X11 Applications :: Gnome",
    "Topic :: Desktop Environment :: Gnome",
]
requires-python = ">=3.11"
dependencies = [
    "PyGObject>=3.44",
]

[project.urls]
Homepage = "https://example.com/gnomeddc"

[project.scripts]
gnomeddc = "gnomeddc.main:main"
