[metadata]
name = gnomeddc
version = 0.1.0
description = Adwaita native GNOME UI for ddcutil
long_description = file: README.md
long_description_content_type = text/markdown
license = GPL-3.0-or-later

[options]
packages = find:
package_dir = =src
include_package_data = True
python_requires = >=3.11
install_requires =
    PyGObject>=3.44

[options.package_data]
gnomeddc =
    resources/ui/*.ui

[options.entry_points]
console_scripts =
    gnomeddc = gnomeddc.main:main
