install_data(
  'com.ddcutil.GnomeDDC.desktop',
  install_dir: join_paths(get_option('datadir'), 'applications')
)

install_data(
  'com.ddcutil.GnomeDDC.appdata.xml',
  install_dir: join_paths(get_option('datadir'), 'metainfo')
)

install_data(
  'icons/hicolor/scalable/apps/com.ddcutil.GnomeDDC.svg',
  install_dir: join_paths(get_option('datadir'), 'icons/hicolor/scalable/apps')
)
